<resources>
    <string name="app_name">Hearing Aid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_privacy">Privacy</string>
    <string name="nav_about">About</string>
    <string name="nav_legal_stuff">Housekeeping</string>
    <string name="nav_share">Share</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_github">GitHub</string>
    <string name="nav_communicate">Communicate</string>
    <string name="fragment_privacy_title">Privacy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_streaming_title">Hearing Aid</string>
    <string name="nav_streaming">Main</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_about_title">About</string>
    <string name="fragment_streaming_snackbar_start_streaming">Started streaming</string>
    <string name="fragment_streaming_snackbar_stop_streaming">Stopped streaming</string>
    <string name="app_icon_content_description">app icon</string>
    <string name="fragment_streaming_latency_message">Your device does NOT support low latency streaming. You might experience audio lag of %1$s 45 ms.</string>
    <string name="fragment_streaming_latency_learn_more_button">Learn more</string>
    <string name="fragment_streaming_latency_dont_show_again_button">Don\'t show again</string>
    <string name="fragment_streaming_more_than">more than</string>
    <string name="fragment_streaming_up_to">up to</string>
    <string name="fragment_streaming_motd_read_more">Read more</string>
    <string name="fragment_streaming_motd_close">Close</string>
    <string name="share_message">With this app, I was able to hear again: %1$s</string>
    <string name="share_screen_title">Share this application with your friends</string>
    <string name="intro_activity_label">Welcome</string>
    <string name="intro_slide_1_title">Welcome…</string>
    <string name="intro_slide_1_description">…to HearingAid. The app that makes you hear again!</string>
    <string name="intro_slide_2_title">What it does</string>
    <string name="intro_slide_2_description">HearingAid will take the mic of your smartphone…</string>
    <string name="intro_slide_3_description">…amplify it and send it to your ear using headphones.</string>
    <string name="intro_slide_4_title">First things first</string>
    <string name="intro_slide_4_description">We need your permission to access the mic.</string>
    <string name="fragment_settings_use_equalizer">Use the equalizer</string>
    <string name="fragment_settings_equalizer_explanation">Disable the equalizer if you experience high audio latencies. Enabling the equalizer will allow you to customize the sound to your hearing loss.</string>
    <string name="fragment_settings_equalizer_title">Equalizer</string>
    <string name="nav_settings">Settings</string>
    <string name="fragment_settings_perform_equalizer_setup">Restart hearing test</string>
    <string name="fragment_streaming_playpause_notification_channel_name">HearingAid Notifications</string>
    <string name="fragment_streaming_playpause_notification_channel_description">Contains the notification that the HearingAid is running.</string>
    <string name="fragment_streaming_playpause_notification_content_running">HearingAid is running</string>
    <string name="fragment_streaming_playpause_notification_content_not_running">HearingAid is switched off</string>
    <string name="fragment_streaming_playpause_notification_play_action_name">Start</string>
    <string name="fragment_streaming_playpause_notification_pause_action_name">Pause</string>
    <string name="fragment_streaming_playpause_notification_hide_action_name">Hide</string>
    <string name="fragment_settings_Hz">Hz</string>
    <string name="fragment_settings_kHz">kHz</string>
    <string name="fragment_settings_MHz">MHz</string>
    <string name="fragment_settings_frequency_bin_pattern_abbreviated">{abbreviatedFrequency}</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_current_profile_title">Current profile</string>
    <string name="fragment_settings_add_profile_ok">Add</string>
    <string name="fragment_settings_add_profile_cancel">Cancel</string>
    <string name="fragment_settings_rename_profile_ok">Rename</string>
    <string name="fragment_settings_rename_profile_cancel">Cancel</string>
    <string name="fragment_about_superpowered_logo_content_description">Logo of Superpowered Inc.</string>
    <string name="fragment_settings_loading">Loading…</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_message">Found a bug or had a fresh feature idea? We\'ll be happy to implement it!</string>
    <string name="feedback_hint">Feedback</string>
    <string name="feedback_error">Please fill this field.</string>
    <string name="feedback_latency_title">How much audio latency do you experience?</string>
    <string name="feeedback_privacy_checkbox">I have read and agreed to the privacy statement</string>
    <string name="feedback_view_privacy_statement">View the Privacy Statement</string>
    <string name="feedback_privacy_unchecked_toast">Please accept the privacy statement</string>
    <string name="feedback_latency_min">Not at all</string>
    <string name="feedback_latency_max">Disturbing</string>
    <string name="fragment_settings_crash_reporting_enabled">Send crash reports</string>
    <string name="fragment_settings_view_privacy">View the Privacy Statement</string>
    <string name="fragment_settings_restart_alert_title">Restart required</string>
    <string name="fragment_settings_restart_alert_message">In order to apply the new settings, the app must restart. You may choose to restart later, in that case your settings will not be applied until you restart the app.</string>
    <string name="fragment_settings_restart_alert_restart_button">Restart</string>
    <string name="fragment_settings_restart_alert_cancel_button">Cancel</string>
    <string name="fragment_settings_crashlytics_title">Crash reports</string>
    <string name="title_activity_profile_editor">Profile Editor</string>
    <string name="profile_editor_drag_content_description">Drag to sort</string>
    <string name="fragment_settings_edit_toolbar_entry">Edit profiles</string>
    <string name="profile_editor_profile_deleted_snackbar">Profile %1$s has been deleted</string>
    <string name="profile_editor_profile_name_hint">Profile name</string>
    <string name="profile_editor_delete_profile_alert_title">Delete profile</string>
    <string name="profile_editor_delete_profile_alert_message">This will delete the profile %1$s permanently. Are you sure?</string>
    <string name="profile_editor_delete_profile_alert_button_delete">Delete</string>
    <string name="profile_editor_delete_profile_button_cancel">Cancel</string>
    <string name="profile_editor_new_profile_default_name">New profile %1$d</string>
    <string name="profile_editor_delete_button_unable_to_delete">Cannot delete the last profile</string>
    <string name="fragment_streaming_wired_headphones_dont_show_again_button">Don\'t show again</string>
    <string name="fragment_streaming_wired_headphones_play_anyway_button">Play anyway</string>
    <string name="fragment_streaming_wired_headphones_reason_message">We recommend using a wired headset for best performance.</string>
    <string name="fragment_settings_version_text_view">Version: %1$s\nVersion code: %2$d</string>
    <string name="bugsnag_api_key_not_specified_error_message">Bugsnag API key not defined, ckeck your build environment</string>
    <string name="fragment_streaming_diagnostic_data_question">Can we collect diagnostic data (crash logs) from you?</string>
    <string name="fragment_streaming_diagnostic_data_yes">Yes</string>
    <string name="fragment_streaming_diagnostic_data_no">No</string>
    <string name="fragment_streaming_diagnostic_data_privacy_policy">Privacy policy</string>
    <string name="fragment_streaming_diagnostic_data_change_later_in_settings_toast">You may change your choice at any time in the settings of the app.</string>
</resources>
