<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.Design.Hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/feedback_latency_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/feedback_latency_min" />

        <SeekBar
            android:id="@+id/feedback_audio_latency_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:progress="3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/feedback_latency_max" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <CheckBox
        android:id="@+id/feedback_privacy_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feeedback_privacy_checkbox" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <Button
        android:id="@+id/feedback_view_privacy_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_view_privacy_statement" />


</LinearLayout>